--- a/styles.css
+++ b/styles.css
@@ -2,15 +2,39 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background: rgba(185, 185, 185, 0.143)
+    background: rgba(185, 185, 185, 0.143);
+    transition: all ease-in-out 0.1s;
+}
+
+.navbar-brand {
+    font-size: 2rem;
 }
 
 .landing-page {
-    padding: 5rem;
-    height: 100vh;
-    background: linear-gradient(45deg, #8080804d,#b5b5b54d,#dad9d94d,#ffffff7d);
+    padding: 25vw;
+    background: linear-gradient(0deg, #808080bd 10%,#b5b5b5bd 20%,#dad9d9bd 30%,#ffffffbd 40%), 
+    linear-gradient(45deg, #b5b5b5bd 40%, #dad9d9bd 10%, #ffffffbd 20%, #808080bd 30%), 
+    linear-gradient(90deg, #dad9d9bd 30%, #ffffffbd 40%, #808080bd 10%, #b5b5b5bd 20%), 
+    linear-gradient(135deg, #ffffffbd 20%, #808080bd 30%, #b5b5b5bd 40%, #dad9d9bd 10%), 
+    linear-gradient(180deg, #808080bd 10%, #b5b5b5bd 20%, #dad9d9bd 30%, #ffffffbd 40%);
     position: relative;
     z-index: -1;
+}
+
+
+.landing-page-dark { 
+    padding: 25vw; 
+    position: relative; 
+    z-index: -1; 
+    background: linear-gradient(0deg, #8080809f 10%,#5f5f5f9f 20%,#3838389f 30%,#0000009f 40%), 
+    linear-gradient(45deg, #5f5f5f9f 40%, #3838389f 10%, #0000009f 20%, #8080809f 30%), 
+    linear-gradient(90deg, #3838389f 30%, #0000009f 40%, #8080809f 10%, #5f5f5f9f 20%), 
+    linear-gradient(135deg, #0000009f 20%, #8080809f 30%, #5f5f5f9f 40%, #3838389f 10%), 
+    linear-gradient(180deg, #8080809f 10%, #5f5f5f9f 20%, #3838389f 30%, #0000009f 40%) !important;
+}
+
+.modal {
+    overflow: hidden;
 }
 
 .col-md-6 img {
@@ -29,7 +53,7 @@ body {
 }
 
 .products {
-    background-color: white;
+    background: #fff;
 }
 
 .card {
@@ -37,6 +61,10 @@ body {
     border-radius: 0.5rem;
     text-overflow: ellipsis;
     transition: all ease-in-out 0.2s;
+}
+
+#productImage {
+    border-radius: 0.5rem;
 }
 
 .card img {
@@ -59,6 +87,11 @@ body {
     border-radius: 50%;
     border: none;
     box-shadow: #00000071 2px 2px 15px 2px;
+    z-index: 10000;
+}
+
+.btn-close-dark {
+    color: white !important;
 }
 
 .circle:active {
@@ -68,11 +101,11 @@ body {
 @media (min-width: 1200px) {
 
     .navbar-brand {
-        margin-left: 5rem;
+        margin-left: 7rem;
     }
 
     .navbar-nav {
-        margin-left: 30rem;
+        margin-left: 28rem;
     }
 
     .dropdown-menu {
@@ -87,6 +120,7 @@ body {
         opacity: 1;
     }
 }
+
 
 @media (min-width: 960px) {
     .col-lg {
