--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     margin: 0;
     padding: 0;
@@ -96,6 +100,25 @@ body {
 .circle:active {
     box-shadow: #00000071 0.2px 0.2px 1.5px 0.2px;
 }
+
+.aboutus{
+    box-shadow: inset #0000006e 0px 1px 10px 0.5px;
+    position: relative;
+    background-color: white;
+    z-index: -1;
+}
+
+.aboutus .container {
+    padding: 1rem;
+    height: 100%; 
+    width: 50%;
+}
+
+footer {
+    background-color: white;
+    box-shadow: #0000006e 0px -1px 10px 0.5px;
+}
+
     
 @media (min-width: 1200px) {
 
